# video_learn

./: .gitignore  CMakeLists.txt  README.md  audio.cpp  audio.h  main.cpp
audio/: CMakeLists.txt  README.md  audio.cpp  audio.h  test.pcm
examples/: CMakeLists.txt  avio_list_dir.cpp  avio_reading.cpp  decode_audio.cpp  decode_video.cpp  demuxing_decoding.cpp  encode_video.cpp  extract_mvs.cpp  filtering_audio.cpp  filtering_video.cpp  http_multiclient.cpp  hw_decode.cpp  metadata.cpp  muxing.cpp  qsvdec.cpp  remuxing.cpp  resampling_audio.cpp  scaling_video.cpp  transcode_aac.cpp  transcoding.cpp  vaapi_encode.cpp  vaapi_transcode.cpp
libyuv/: CMakeLists.txt  yuvUtil.cpp  yuvUtil.h
player/: CMakeLists.txt  player.cpp  player.h
pushStream/: CMakeLists.txt  pushStream.cpp  pushStream.h
src/: audio.cpp  audio.h  audio_sampling.c  audio_sampling.cpp  audio_sampling.h
stream/: CMakeLists.txt  push_stream.cpp  push_stream.h
test/: CMakeLists.txt  audio_test.cpp  player.cpp  player_test.cpp  push_stream.cpp  video_test.cpp
video/: CMakeLists.txt  README.md  video.cpp  video.h
